# pf-battle-sim

./: .gitignore  README.docx  README.md  deno.jsonc  package.json  pyproject.toml  todo.md
code/: pathfinder_cli.py
data/: goblin_archer.json
docs/: pmd_integration.md
docs/core_advancedplayerguide/: Basics - Rules - Archives of Nethys Pathfinder RPG Database.md
docs/core_bestiary/: Bestiary - Rules - Archives of Nethys Pathfinder RPG Database.md  example_monster.md
docs/core_gm/: GameMastery Guide - Rules - Archives of Nethys Pathfinder RPG Database.md
docs/core_mythic/: Eternal Gaze - Rules - Archives of Nethys Pathfinder RPG Database.md  Mythic Rules - Rules - Archives of Nethys Pathfinder RPG Database.md
docs/core_rulebook/: Basics - Rules - Archives of Nethys Pathfinder RPG Database.md  Combat - Rules - Archives of Nethys Pathfinder RPG Database.md  Environment - Rules - Archives of Nethys Pathfinder RPG Database.md  Exploration - Rules - Archives of Nethys Pathfinder RPG Database.md  Gamemastering - Rules - Archives of Nethys Pathfinder RPG Database.md  Items - Rules - Archives of Nethys Pathfinder RPG Database.md  Magic - Rules - Archives of Nethys Pathfinder RPG Database.md  Skills - Rules - Archives of Nethys Pathfinder RPG Database.md
examples/: demo_pmd_integration.py
monster_data/: download_page_list.py  orc_warrior.json  solar.json  urls.txt
pmd/: download_pages.py
src/core/: abilityScores.ts  actionHandler.ts  armorClass.ts  attack.ts  attackResult.ts  (+7 more)
tests/: test_advanced_combat.py  test_combat_engine.py  test_pmd_integration.py
(+28 files in other folders)
